# core_video_editor

./: .gitignore  Cargo.toml  README.md
doc_api/: ffmpeg.md  format.md  frame.md  frame_io.md  item.md  layer.md  module.md
src/: cvvideo.rs  frame.rs  lib.rs  main.rs
src/backend/: cvvideo.rs  ffmpeg.rs  imgrs.rs  mod.rs  wgpu.rs
src/backend/ffmpeg/: base.rs  mod.rs  read.rs  read_raw.rs  util.rs  write_raw.rs
src/base/: frame.rs  interface.rs  item.rs  layer.rs  mod.rs  scene.rs
src/cache/: mod.rs
src/frame/: cvvideo.rs  frame.rs  item.rs  layer.rs  manager.rs  mod.rs
src/io/: input.rs  mod.rs  output.rs
src/manager/: fi_manager.rs  mod.rs
src/project/: mod.rs
src/test/: mod.rs
