[package]
name = "core_video_editor"
version = "0.1.0"
edition = "2021"
authors=["NyanRus"]
readme="./README.md"
repository="https://github.com/nyanrus/core_video_editor"
license-file="./COPYING"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.66"
# image = "0.24"
# imageproc = {version="0.23",features = ["rayon"]}
rayon = "1.5"
rgb = "0.8"
ffmpeg-next = "5.1"

serde_json = "1.0"
serde = "1.0"
ulid = "1.0"
once_cell = "1.13"
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.21"
# nalgebra = "0.31.1"
micromath = "2.0.0"
# fast_fp = "0.1.3"
# cv-convert = {version = '0.20.0', features = ['full']}
# wgpu = "0.13.1"
#nannou = "0.18"


#cargo vendor lines
[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
#end of cargo vendor lines