[package]
name = "core_video_editor"
version = "0.1.0"
edition = "2021"
authors = ["NyanRus"]
readme = "./README.md"
repository = "https://github.com/nyanrus/core_video_editor"
license-file = "./COPYING"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#opencv = "0.74"
#image = "0.24"
# imageproc = {version="0.23",features = ["rayon"]}
#rayon = "1.5"
#rgb = "0.8"
ffmpeg-next = "5.1.1"
anyhow = "1.0"
bytemuck = "1"

lru = "0.8.1"
serde_json = "1.0"
serde = "1.0"
ulid = "1.0"
once_cell = "1.16"
parking_lot = "0.12.1"
#tokio = { version = "1.21.2", features = ["full"] }
#futures = "0.3.25"
#micromath = "2.0.0"

#cargo vendor lines
[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
#end of cargo vendor lines
