[package]
name = "core_video_editor"
version = "0.1.0"
edition = "2021"
authors = ["NyanRus"]
readme = "./README.md"
repository = "https://github.com/nyanrus/core_video_editor"
license-file = "./COPYING"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "6.0"
anyhow = "1.0"
bytemuck = "1"

lru = "0.10.0"
serde_json = "1.0"
serde = "1.0"
ulid = "1.0"
once_cell = "1.17"
parking_lot = "0.12.1"

#START cargo vendor lines
[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
#END cargo vendor lines
